--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,16 @@ body{
   min-height: 100vh;
   display: flex;
   justify-content: center;
+  flex-direction: column;
   align-items: center;
-  background-color: rgb(51, 0, 17);
+  background-color: whitesmoke;
+ }
+ .name{
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 38px;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 30px;
  }
  .board{
   border: 1px solid black;
