--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,10 @@ body{
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  background-color: whitesmoke;
+  background: url('../background.jpg');
  }
  .name{
+   color: white;
   font-family: 'Times New Roman', Times, serif;
   font-size: 38px;
   display: flex;
